agw-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt  # Fixed the typo here
    cert-manager.io/acme-challenge-type: http01
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-backend-path-prefix: /
    appgw.ingress.kubernetes.io/appgw-ssl-protocol: MultiProtocolBasic
    appgw.ingress.kubernetes.io/rewrite-target: /$1
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
  name: voter-ingress
spec:  
  rules:
  - host: voter.sample.com
    http:
      paths:
      - backend:
          service:
            name: azure-vote-front
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - voter.sample.com
    secretName: voter-ing-tls
